cabal-version:      2.4
name:               hasknoaa
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Steven Williams
maintainer:         theblessedadventhope@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Hasknoaa

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , bytestring ^>=0.11.4.0
                    , http-client ^>=0.7.13.1
                    , http-types ^>=0.12.3
                    , lens ^>=5.1.1
                    , text ^>=1.2.5
                    , wreq ^>=0.5.4.1
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hasknoaa-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.4.0
